<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>JSync</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <java.version>17</java.version> <!-- Remplace par ta version de Java -->
    </properties>

    <dependencies>
	    <dependency>
	        <groupId>jakarta.xml.bind</groupId>
	        <artifactId>jakarta.xml.bind-api</artifactId>
	        <version>4.0.0</version>
	    </dependency>
	    <dependency>
	        <groupId>org.glassfish.jaxb</groupId>
	        <artifactId>jaxb-runtime</artifactId>
	        <version>4.0.3</version>
	    </dependency>
	</dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>17</source> <!-- Remplace par ta version de Java -->
                    <target>17</target> <!-- Remplace par ta version de Java -->
                </configuration>
            </plugin>
	        <plugin>
	            <groupId>org.apache.maven.plugins</groupId>
	            <artifactId>maven-exec-plugin</artifactId>
	            <version>3.1.0</version>
	            <configuration>
	                <mainClass>com.example.MainApp</mainClass> <!-- Remplace par ton Main class -->
	                <arguments>
	                    <argument>--module-path</argument>
	                    <argument>/chemin/vers/javafx-sdk/lib</argument> <!-- Remplace par le chemin de ton JavaFX SDK -->
	                    <argument>--add-modules</argument>
	                    <argument>javafx.controls,javafx.fxml</argument>
	                </arguments>
	            </configuration>
	        </plugin>
        </plugins>
    </build>

</project>
